--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <hi>TO</hi>
       <h1>FIDU PIZZA ONLINE ORDER</h1>
      </div>
-     <h3>We offer for you</h3>
+     <h3>We offer pizza for you</h3>
     <div class="raw">
       <div class="raw1">
        <img src="images/amirali-mirhashemian-w1iMfs6yxuo-unsplash.jpg" width="200">
