--- a/index.html
+++ b/index.html
@@ -1,84 +1,152 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.4.1.js"></script>
-    <script src="js/script.js"></script>
-    <title>FIDU Pizza online Order </title>
-  </head>
-  <body>
-    <div class="container">
-     <div class="section1">
-      <h1>WELCAME</h1>
-      <hi>TO</hi>
-      <h1>FIDU PIZZA ONLINE ORDER</h1>
-     </div>
-     <h3>We offer pizza for you</h3>
-    <div class="raw">
-      <div class="raw1">
-       <img src="images/amirali-mirhashemian-w1iMfs6yxuo-unsplash.jpg" width="200">
-       <h4>Onions</h4>
-       <img src="images/brenna-huff-22Vt7JIf7ZI-unsplash.jpg" width="200">
-       <h4>brenna</h4>
-      </div>
-      <div class="raw2">
-       <img src="images/masimo-grabar-NzHRSLhc6Cs-unsplash.jpg" width="200" height="130">
-       <h4>masimo</h4>
-       <img src="images/pinar-kucuk-Ae7jQFDTPk4-unsplash.jpg" width="200" height="130">
-       <h4>pinar</h4>
-      </div>
-      <div class="raw3">
-       <img src="images/thomas-tucker-MNtag_eXMKw-unsplash.jpg" width="200">
-       <h4>thomas</h4>
-      </div>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title> FIDU PIZZERIA</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Simonetta&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+    <div id="nav">
+        <ul>
+            <div class="prep">
+                <img src="images/kisspng-pizza-hut-buffet-restaurant-logo-hut-5ac10f6365c073.4794892815226018274168.png" alt="logo" width="300">
+            </div>
+            <li><a href="#about us">MENU</a></li>
+            <li><a href="#menu">ABOUT</a></li>
+            <li><a href="#orders">CONTACT</a></li>
+            <li><a href="#contact">ORDERS</a></li>
+        </ul>
     </div>
-      <div class="row">
-        <div class="col-md-6">
-          <h2>Sizes</h2>
-          <form id="new-pizza-order">
-            <div id="extra-pizzas">
-              <div class="another-pizza">
-                <select class="form-control new-pizza-size">
-                  <option id="size1" value="600">Small - 600sh</option>
-                  <option id="size2" value="800">Medium - 800sh</option>
-                  <option id="size3" value="1000">Large - 1000sh</option>
-                </select>
-
-                <h2>Toppings</h2>
-                <h5sigit>10sh extra for each topping</h5sigit>
-                <div class="checkbox">
-                  <label><input type="checkbox" name="toppings" value="1">Extra Cheese</label>
+    <div class="head">
+        <h1>FIdu PIZZERIA</h1>
+    </div>
+    <div class="jumbotron">
+        <div id="about us"></div>
+        <div class="About">
+            <h3>ABOUT US</h3>
+            <P>Fidu pizzeria is the premiere online delivery service for ordering from Nairobi’s best restaurants and grocery stores. Browse through our diverse range of menus and when you order online from your favourite places they are always saved for easy and faster reordering.
+              Yum launched in the summer of 2012 with the aim of making it simple and easy for anyone to order food straight to their door. We now work with over 250 restaurants and over 10,000 customers in Nairobi and we just launched in Kampala, Uganda. Yum stands out in the industry on efficiency, variety, and customer service.</P>
+        </div>
+    </div>
+    <div class="vlob">
+        <div id="menu"></div>
+        <h2>MENU</h2>
+        <div id="row" class="edit">
+            <img src="images/amirali-mirhashemian-w1iMfs6yxuo-unsplash.jpg" alt="small" height="200px" width="200px">
+            <p style="text-decoration: black; color:red;">Small<br>Ksh.400</p>
+            <img src="images/brenna-huff-22Vt7JIf7ZI-unsplash.jpg" alt="medium" height="200px" width="200px">
+            <p style="text-decoration:black; color:blue;">Medium <br>Ksh.600</p>
+            <img src="images/masimo-grabar-NzHRSLhc6Cs-unsplash.jpg" alt="large" height="200px" style="font-size: 30px;" width="200px">
+            <p style="text-decoration:gray; color:goldenrod;" style="font-size: 30px;">Large<br>Ksh.800</p>
+        </div>
+        <div class="jumbotron">
+            <div id="orders"></div>
+            <div class="order">
+                <h4>ORDERS</h4><br>
+                <p>Pick your favourite pizza:</p>
+                <!-- <input list="pizza taste" name="pizza taste"> -->
+                <!-- <form action="/action_page.php" method="get"> -->
+                <input list="browsers" name="pizza taste">
+                <datalist id="browsers">
+                    <option value="Veg Tikka">
+                    <option value="Chicken Onions">
+                    <option value="Peri-Peri-Chicken">
+                    <option value="Steak">
+                    <option value="Boerewors">
+                    <option value="Mushroom">
+                </datalist>
+                <!-- <input type="submit"> -->
+                </form>
+                <div class="you">
+                    <p>Choose your prefered size:</p>
+                    <form>
+                        <input list="Abass" name="preferd size">
+                        <datalist id="Abass">
+                            <option value="Regular">
+                            <option value="Medium">
+                            <option value="Large">
+                        </datalist>
+                        <!-- <input type="submit"> -->
+                    </form>
                 </div>
-                <div class="checkbox">
-                  <label><input type="checkbox" name="toppings" value="1">Mushrooms</label>
+                <div class="crush">
+                    <p>Choose your favourite crust:</p>
+                    <form>
+                        <input list="dado" name="favourite crust">
+                        <datalist id="dado">
+                            <option value="Thin Crust @90">
+                            <option value="Thick crust @150">
+                            <option value="FlatBread Crust @200">
+                            <option value="Custom Crust @250">
+                        </datalist>
+                        <!-- <input type="submit"> -->
+                    </form>
                 </div>
-                <div class="checkbox">
-                  <label><input type="checkbox" name="toppings" value="1">Peppers</label>
+                <div class="unknown">
+                    <p>Choose your favourite toppings</p>
+                    <form>
+                        <input list="break" name="favourite toppings">
+                        <datalist id="break">
+                            <option value="Onions @70">
+                            <option value="Mushroom @60">
+                            <option value="Tomato @100">
+                            <option value="Olives @110">
+                            <option value="Beef Peperoni @180">
+                            <option value="PeriPeri Chicken @200">
+                        </datalist>
+                        <!-- <input type="submit"> -->
+                    </form>
                 </div>
-                <div class="checkbox">
-                  <label><input type="checkbox" name="toppings" value="1">Sausage</label>
-                </div>
-                <div class="checkbok">
-                      <label><input type="checkbox" name="toppings" value="1">Onions</label>
+                <div class="foolus">
+                    <p>Number of pizzas:</p>
+                    <form>
+                        <input list="undo" name="Number of pizza">
+                        <datalist id="undo">
+                            <option value="1">
+                            <option value="2">
+                            <option value="3">
+                            <option value="4">
+                            <option value="5">
+                            <option value="6">
+                            <option value="7">
+                            <option value="8">
+                            <option value="9">
+                            <option value="10">
+                        </datalist>
+                        <input type="submit">
+                    </form>
                 </div>
             </div>
-            <span class="btn btn-primary" id="add-more-pizza">Add Another Pizza Pie</span>
-            <button type="submit" class="btn btn-info">Place Order</button>
-          </form>
         </div>
 
-        <div class="col-md-6">
-          <div id="show-pizza-results">
-            <h2>Your Pizza Order:</h2>
-            <div id="pizza-price">
-              <ul>
-              </ul>
-            </div>
-            <h1 id="complete-total"></h1>
-          </div>
+        <div class="dri">
+            <div id="contact"></div>
+            <h4>CONTACT</h4>
+            <footer>
+                <p>Contact information: <a href="moonbyfidu123@gmail.com"></a></p>
+                <p>Contact information: <a href="moonbyfidu123@gmail.com"></a></p>
+                <p>Phone: <a href="tel:+254736681308">Call me at +254736681308</a></p>
+                <p><em>&copy; 2020 All Rights Reserved</em></p>
+
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-google"></a>
+                <a href="#" class="fa fa-yahoo"></a>
+            </footer>
         </div>
-      </div>
-    </div>  
-  </body>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="js/jquery-3.4.1.js"></script>
+        <script src="js/script.js"></script>
+</body>
+
 </html>
