--- a/index.html
+++ b/index.html
@@ -1,84 +1,157 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.4.1.js"></script>
-    <script src="js/script.js"></script>
-    <title>FIDU Pizza online Order </title>
-  </head>
-  <body>
-    <div class="container">
-     <div class="section1">
-      <h1>WELCAME</h1>
-      <hi>TO</hi>
-      <h1>FIDU PIZZA ONLINE ORDER</h1>
-     </div>
-     <h3>We offer for you</h3>
-    <div class="raw">
-      <div class="raw1">
-       <img src="images/amirali-mirhashemian-w1iMfs6yxuo-unsplash.jpg" width="200">
-       <h4>Onions</h4>
-       <img src="images/brenna-huff-22Vt7JIf7ZI-unsplash.jpg" width="200">
-       <h4>brenna</h4>
-      </div>
-      <div class="raw2">
-       <img src="images/masimo-grabar-NzHRSLhc6Cs-unsplash.jpg" width="200" height="130">
-       <h4>masimo</h4>
-       <img src="images/pinar-kucuk-Ae7jQFDTPk4-unsplash.jpg" width="200" height="130">
-       <h4>pinar</h4>
-      </div>
-      <div class="raw3">
-       <img src="images/thomas-tucker-MNtag_eXMKw-unsplash.jpg" width="200">
-       <h4>thomas</h4>
-      </div>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title> FIDU PIZZERIA</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Simonetta&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+    <div id="nav">
+        <ul>
+            <div class="prep">
+                <img src="images/download.png" alt="logo">
+            </div>
+            <li><a href="#about us">MENU</a></li>
+            <li><a href="#menu">ABOUT</a></li>
+            <li><a href="#orders">ORDERS</a></li>
+            <li><a href="#contact">CONTACT</a></li>
+        </ul>
     </div>
-      <div class="row">
-        <div class="col-md-6">
-          <h2>Sizes</h2>
-          <form id="new-pizza-order">
-            <div id="extra-pizzas">
-              <div class="another-pizza">
-                <select class="form-control new-pizza-size">
-                  <option id="size1" value="600">Small - 600sh</option>
-                  <option id="size2" value="800">Medium - 800sh</option>
-                  <option id="size3" value="1000">Large - 1000sh</option>
+    <div class="head">
+        <h1>FIDU PIZZERIA</h1>
+    </div>
+    <div class="jumbotron">
+        <div id="about us"></div>
+        <div class="About">
+            <h3>ABOUT US</h3>
+            <P>A fidu Pizza Inn pizza box might be one of the most recognisable icons of Africa. Whichever way you slice it, Pizza Inn is an industry leader in the quick service pizza game. The ?rst Pizza Inn outlet opened its doors in 1994 in Harare, Zimbabwe, and rose quickly in popularity. Serving hot oven-fresh pizza with its signature all-natural tomato sauce and using only the freshest ingredients, Pizza Inn has established itself at the top of the industry and is easily one of the first choices in quick service pizza in Africa.</P>
+        </div>
+    </div>
+    <div class="vlob">
+        <div id="menu"></div>
+        <h2>MENU</h2>
+        <div id="row" class="edit">
+            <img src="images/masimo-grabar-NzHRSLhc6Cs-unsplash.jpg" height="200px" width="200px">
+            <p>Small<br>Ksh.300</p>
+            <img src="images/pinar-kucuk-Ae7jQFDTPk4-unsplash.jpg" height="200px" width="200px">
+            <p style=>Medium <br>Ksh.600</p>
+            <img src="images/brenna-huff-22Vt7JIf7ZI-unsplash.jpg" height="200px" style="font-size: 30px;" width="200px">
+            <p>Large<br>Ksh.1200</p>
+        </div>
+        <div class="jumbotron">
+            <div id="orders"></div>
+            <div class="order">
+                <h4>ORDERS</h4><br>
+                <div id="taste">
+                    <p>Pick your favourite pizza taste:</p>
+                </div>
+                <!-- <input list="pizza taste" name="pizza taste"> -->
+                <!-- <form action="/action_page.php" method="get"> -->
+                <select id="browsers">
+                    <option value="100">Veg Tikka @ Ksh100</option>
+                    <option value="100">Chicken Tikka @ Ksh100</option>
+                    <option value="120">Peri-Peri-Chicken @ Ksh120</option>
+                    <option value="120">BBQ Steak @ Ksh120</option>
+                    <option value="150">Boerewors @ Ksh150</option>
+                    <option value="150">Hawaiian @ Ksh150</option>
+                    <option value="180">Chicken and Mushroom @ Ksh180</option>
                 </select>
-
-                <h2>Toppings</h2>
-                <h5sigit>10sh extra for each topping</h5sigit>
-                <div class="checkbox">
-                  <label><input type="checkbox" name="toppings" value="1">Extra Cheese</label>
+                <!-- <input type="submit"> -->
+                </form>
+                <div class="you">
+                    <div id="size">
+                        <p>Choose your prefered size:</p>
+                    </div>
+                    <form>
+                        <select id="Abass">
+                            <option value="400">Regular @ Ksh 400</option>
+                            <option value="600">Medium @ Ksh 600</option>
+                            <option value="1200">Large @ Ksh 1200</option>
+                        </select>
+                        <!-- <input type="submit"> -->
+                    </form>
                 </div>
-                <div class="checkbox">
-                  <label><input type="checkbox" name="toppings" value="1">Mushrooms</label>
+                <div class="crush">
+                    <div id="crust">
+                        <p>Choose your favourite crust:</p>
+                    </div>
+                    <form>
+                        <select id="dado">
+                            <option value="150">Thin Crust @150</option>
+                            <option value="200">Thick crust @200</option>
+                            <option value="250">FlatBread Crust @250</option>
+                            <option value="280">Custom Crust @280</option>
+                        </select>
+                        <!-- <input type="submit"> -->
+                    </form>
                 </div>
-                <div class="checkbox">
-                  <label><input type="checkbox" name="toppings" value="1">Peppers</label>
+                <div class="unknown">
+                    <div id="toppings">
+                        <p>Choose your favourite toppings</p>
+                    </div>
+                    <form>
+                        <select id="break">
+                            <option value="70">onion @70</option>
+                            <option value="800">tomato @60</option>
+                            <option value="100">Mushrooms @100</option>
+                            <option value="110">Olives @110</option>
+                            <option value="150">Pineapple @150</option>
+                            <option value="180">Beef Peperoni @180</option>
+                            <option value="200">PeriPeri Chicken @200</option>
+                        </select>
+                        <!-- <input type="submit"> -->
+                    </form>
                 </div>
-                <div class="checkbox">
-                  <label><input type="checkbox" name="toppings" value="1">Sausage</label>
-                </div>
-                <div class="checkbok">
-                      <label><input type="checkbox" name="toppings" value="1">Onions</label>
+                <div class="foolus">
+                    <div id="pizzas">
+                        <p>Number of pizzas:</p>
+                    </div>
+                    <form>
+                        <select id="undo">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                        </select><br><br>
+                        <button onclick="veil()" type="button">Submit</button>
+                    </form>
                 </div>
             </div>
-            <span class="btn btn-primary" id="add-more-pizza">Add Another Pizza Pie</span>
-            <button type="submit" class="btn btn-info">Place Order</button>
-          </form>
         </div>
 
-        <div class="col-md-6">
-          <div id="show-pizza-results">
-            <h2>Your Pizza Order:</h2>
-            <div id="pizza-price">
-              <ul>
-              </ul>
-            </div>
-            <h1 id="complete-total"></h1>
-          </div>
+        <div class="dri">
+            <div id="contact"></div>
+            <h4>CONTACT</h4>
+            <footer>
+                <p>Contact information: <a href="moonboyfidu123@gmail.com">moonboyfidu123@gmail.com</a></p>
+                <p>Phone: <a href="tel:+254798017031">Call me at +25436681308</a></p>
+                <p><em>&copy; 2020 All Rights Reserved</em></p>
+
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-google"></a>
+                <a href="#" class="fa fa-yahoo"></a>
+            </footer>
         </div>
-      </div>
-    </div>  
-  </body>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="js/jquery-3.4.1.js"></script>
+        <script src="js/script.js"></script>
+</body>
+
 </html>
